2005-02-02  Jakub Steiner <jimmac@ximian.com>

	* scalable/filesystems/gnome-fs-directory.svg: pixel perfect trace
	* scalable/filesystems/gnome-fs-home.svg: dtto
	* scalable/emblems/emblem-favorite.svg: add metadata

2005-02-01  Jakub Steiner <jimmac@ximian.com>

	* scalable/emblems/emblem-favorite.icon.in
	* scalable/emblems/emblem-favorite.svg: start phasing in
	  pixel-perfect(TM) SVG icons again.

	* 48x48/emblems/emblem-favorite.icon.in
	* 48x48/emblems/emblem-favorite.png: remove


2005-01-31  Jakub Steiner <jimmac@ximian.com>

	* 24x24/filesystems/gnome-fs-home.png: 24x24 version, completes
	  bug #164502

2005-01-31  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/gnome-fs-home.png 
	* 16x16/filesystems/gnome-fs-directory.png: 16x16 version of the
	  folder icons

2005-01-24  Rodney Dawes  <dobey@novell.com>

	* NEWS, configure.in: Update for 2.9.90 release
	
2005-01-24  Rodney Dawes  <dobey@novell.com>

	* 48x48/emblems/Makefile.am: Dist the icon.in files, and not only the
	resulting generated icon files
	Add emblem-distinguished.icon.in to the list of icon files
	Add emblem-distinguished.png to the list of images

2005-01-24  Jakub Steiner <jimmac@ximian.com>

	* 192x192/filesystems/gnome-fs-trash*: remove old icons. Vectors
	  in progress.

2005-01-20  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/Makefile.am
	* 16x16/filesystems/gnome-fs-locally-shared.png
	* 16x16/filesystems/gnome-fs-share-private.png
	* 24x24/filesystems/Makefile.am
	* 24x24/filesystems/gnome-fs-locally-shared.png
	* 24x24/filesystems/gnome-fs-share-private.png
	* 24x24/filesystems/gnome-fs-share.png: network shares and locally shared
		folders.

2005-01-19  Jakub Steiner <jimmac@ximian.com>

	* 48x48/filesystems/gnome-fs-trash-empty.png
	* 48x48/filesystems/gnome-fs-trash-full.png
	* 32x32/filesystems/gnome-fs-trash-empty.png
	* 32x32/filesystems/gnome-fs-trash-full.png
	* 24x24/filesystems/gnome-fs-trash-empty.png
	* 24x24/filesystems/gnome-fs-trash-full.png