@@ -1,3 +1,10 @@
+2005-02-03  Jakub Steiner <jimmac@ximian.com>
+
+	* {16x16,24x24,48x48}/apps/gnome-run.png:
+	* {16x16,24x24,48x48}/apps/gnome-help.png:
+	* {16x16,24x24,48x48}/apps/gnome-logout.png: missing sizes
+		(#166156)
+
 2005-02-02  Jakub Steiner <jimmac@ximian.com>
 
 	* scalable/filesystems/gnome-fs-directory.svg: pixel perfect trace
